<resources>
    <string name="intro_title"><font color="#000000">Unveiling a World</font> \n<font color="#008b86">Toys &amp; Accessories &amp; Foods</font> \n<font color="#000000">For Your Pet</font></string>
    <string name="intro_text">Browse the latest styles from top brands\nGet personalized recommendations\nEnjoy fast, free shipping</string>
    <string name="app_name">Redbull</string>
    <string name="intro_signin">Already have an account?<font color="#008b86"> Sign In</font></string>
    <string name="greetingText">Welcome Back</string>
    <string name="userNameEditText">Email or Username</string>
    <string name="passwordEditText">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signInButton">SIGN IN</string>
    <string name="dontHaveAccountText">Do not have an account?</string>
    <string name="createAccountText"> \tSign Up</string>
    <string name="signUpButton">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">profile</string>
</resources>